--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 annotated-types==0.7.0
 anyio==4.10.0
+awsebcli==3.25.1
+bcrypt==5.0.0
+blessed==1.22.0
 blinker==1.9.0
+botocore==1.40.45
+cement==2.10.14
 certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
 click==8.2.1
+colorama==0.4.6
+cryptography==46.0.2
+decorator==5.2.1
+Deprecated==1.2.18
 distro==1.9.0
+fabric==3.2.2
 Flask==3.1.1
 flask-cors==6.0.1
 Flask-SQLAlchemy==3.1.1
@@ -12,19 +24,35 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+invoke==2.2.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
+jmespath==1.0.1
 MarkupSafe==3.0.2
 openai==1.99.3
-packaging==25.0
+packaging==24.2
+paramiko==4.0.0
+pathspec==0.12.1
 psycopg2-binary==2.9.10
+pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyNaCl==1.6.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+PyYAML==6.0.3
+requests==2.32.5
+semantic-version==2.10.0
+setuptools==80.9.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
+termcolor==2.5.0
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.13.2
+urllib3==1.26.20
+wcwidth==0.2.14
 Werkzeug==3.1.3
+wrapt==1.17.3
